--- a/conf/base.config
+++ b/conf/base.config
@@ -15,9 +15,9 @@ process {
     memory = { 6.GB   * task.attempt }
     time   = { 4.h    * task.attempt }
 
-    errorStrategy = { task.exitStatus in ((130..145) + 104) ? 'retry' : 'finish' }
-    maxRetries    = 1
-    maxErrors     = '-1'
+    // errorStrategy = { task.exitStatus in ((130..145) + 104) ? 'retry' : 'finish' }
+    // maxRetries    = 1
+    // maxErrors     = '-1'
 
     // Process-specific resource requirements
     // NOTE - Please try and re-use the labels below as much as possible.
